--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "openai": "^4.27.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mammoth": "^1.6.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.52.0",
+    "pdf-parse": "^1.1.1"
   }
 }
