--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mammoth": "^1.6.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "openai": "^4.52.0",
-    "pdf-parse": "^1.1.1"
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "mammoth": "1.6.0",
+    "morgan": "1.10.0",
+    "multer": "1.4.5-lts.1",
+    "openai": "4.52.0",
+    "pdf-parse": "1.1.1"
   }
 }
