--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "foglia-staging",
+  "name": "foglia-backend",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Backend di Foglia AI (Express + CORS) per Ecoverso",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": { "node": ">=20.0.0" },
   "dependencies": {
-    "cors": "2.8.5",
-    "dotenv": "16.4.5",
-    "express": "4.19.2",
-    "morgan": "1.10.0"
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
